Fixes layout issue with small result sets
Small number of results (e.g. one result) caused the footer to overlap
the search sidebar. This commit fixes that issue by adding a clear
float to the footer as well as handling the border between the search
sidebar and content when the search results occupy a variety of heights.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -907,6 +907,7 @@ sup
     text-align:right;
     padding:20px;
     background: $blue_midtone_alpha30;
+    clear:both;
 
     p
     {
@@ -1000,6 +1001,7 @@ main
   padding: 20px;
   width:200px;
   background-color: $blue_lightest;
+  border-right:2px solid $blue_midtone;
 
   button,
   select
@@ -1328,8 +1330,8 @@ main
   vertical-align: top;
   padding-top:55px;
   margin-left:240px;
-  background:$white;
   border-left:2px solid $blue_midtone;
+  background:$white;
 }
 
 #results-header
